--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/scripts.js">
-    </script>
+    <script src="js/data.js"></script>
+    <script src="js/scripts.js"></script>
 </head>
 <body>
   <h1>Hola</h1>
