--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="js/jquery.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/data.js"></script>
     <script src="js/scripts.js"></script>
 </head>
 <body>
-  <h1>Hola</h1>
+  <h1 class="active">Hola</h1>
 </body>
 </html>
